--- a/index.html
+++ b/index.html
@@ -39,13 +39,17 @@
                 margin-top: 3%;
             }
 
-            #lastwordsv, #millerknoll1 {
+            #lastwordsv, #millerknoll1, #jlt2, #charting2 {
                 display: none !important;
             }
 
             #millerknoll2 {
                 width: 100% !important;
                 margin-bottom: 24px;
+            }
+
+            #jlt1, #charting1 {
+                width: 100% !important;
             }
         }
     </style>
@@ -96,6 +100,15 @@
             <br><hr><br><br>
 
 
+            <a href="archive/JLT/JLT.html">
+                <img src="archive/JLT/motion.gif" style="display:inline-block; width: 42.1%;" class="pica" id="jlt1">
+                <img src="archive/JLT/bc.png" style="display:block; width: 56.2%; float: right;" class="pica" id="jlt2">
+            </a>
+            <br><br>
+            <h1 class="title"><a href="archive/JLT/JLT.html">讲理堂(JLT)<br>Logo Design</a></h1>
+            <br><hr><br><br>
+
+
             <div class="pic2">
                 <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
                     <img src="archive/stillness_geometric_nostalgia/cover.png" class="pic21 pica">
@@ -113,10 +126,10 @@
 
             <div class="pic">
                 <a href="archive/charting_the_present/charting_the_present.html">
-                    <img src="archive/charting_the_present/cover2.png" class="pic21 pica" style="width: 42.1%">
+                    <img src="archive/charting_the_present/cover2.png" class="pic21 pica" style="width: 42.1%" id="charting1">
                 </a>
                 <a href="archive/charting_the_present/charting_the_present.html">
-                    <img src="archive/charting_the_present/pages.png" class="pic22 pica" style="width: 56.2%">
+                    <img src="archive/charting_the_present/pages.png" class="pic22 pica" style="width: 56.2%" id="charting2">
                 </a>
             </div>
             <br>
@@ -257,6 +270,11 @@
                     <img src="archive/millerknoll/bc.png" class="pica">
                 </a>
             </h2>
+            <h2 class="branding">
+                <a href="archive/JLT/JLT.html">
+                    <img src="archive/JLT/bc.png" class="pica">
+                </a>
+            </h2>
             <h2 class="editorial">
                 <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
                     <img src="archive/stillness_geometric_nostalgia/cover.png" class="pica">
@@ -272,7 +290,6 @@
                     <img src="archive/jungle_daydreaming/display.png" class="pica">
                 </a>
             </h2>
-
             <h2 class="poster">
                 <a href="archive/contemporary_art_expression/contemporary.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
@@ -295,9 +312,6 @@
             </h2>
 
 
-            <h2 class="branding">
-                <img src="archive/JLT/bc.png">
-            </h2>
 
             <h2 class="album">
                 <img src="archive/moon_would_you/moon.png">
