--- a/index.html
+++ b/index.html
@@ -316,6 +316,11 @@
             <h2 class="album">
                 <img src="archive/moon_would_you/moon.png">
             </h2>
+            <h2 class="video">
+                <a href="archive/digital_escapades/digital_escapades.html">
+                    <img src="archive/digital_escapades/preview.png" class="pica">
+                </a>
+            </h2>
             <h2 class="poster video">
                 <img src="archive/black_mamba/poster2.png">
             </h2>
