--- a/about.html
+++ b/about.html
@@ -62,12 +62,13 @@
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <h1 class="category disable">
-                <input type="checkbox" id="albumc"><span id="album">&nbsp Album</span>
+                <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
+                <input type="checkbox" id="websitec"><span id="website">&nbsp Website</span>
+                <input type="checkbox" id="editorialc"><span id="editorial">&nbsp Editorial</span>
                 <input type="checkbox" id="posterc"><span id="poster">&nbsp Poster</span>
                 <input type="checkbox" id="videoc"><span id="video">&nbsp Video</span>
-                <input type="checkbox" id="editorialc"><span id="editorial">&nbsp Editorial</span>
+                <input type="checkbox" id="albumc"><span id="album">&nbsp Album</span>
                 <input type="checkbox" id="modelingc"><span id="modeling">&nbsp Modeling</span>
-                <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
             </h1>
             <h1 class="button disable" id="all">All</h1>
             <h1 class="button disable" id="clear">Clear</h1>
