--- a/index.html
+++ b/index.html
@@ -65,12 +65,13 @@
             <h1><a href="index.html">Valia Liu</a></h1>
             <hr>
             <h1 class="category">
-                <input type="checkbox" id="albumc"><span id="album">&nbsp Album</span>
+                <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
+                <input type="checkbox" id="websitec"><span id="website">&nbsp Website</span>
+                <input type="checkbox" id="editorialc"><span id="editorial">&nbsp Editorial</span>
                 <input type="checkbox" id="posterc"><span id="poster">&nbsp Poster</span>
                 <input type="checkbox" id="videoc"><span id="video">&nbsp Video</span>
-                <input type="checkbox" id="editorialc"><span id="editorial">&nbsp Editorial</span>
+                <input type="checkbox" id="albumc"><span id="album">&nbsp Album</span>
                 <input type="checkbox" id="modelingc"><span id="modeling">&nbsp Modeling</span>
-                <input type="checkbox" id="brandingc"><span id="branding">&nbsp Branding</span>
             </h1>
             <h1 class="button" id="all">All</h1>
             <h1 class="button" id="clear">Clear</h1>
@@ -213,67 +214,17 @@
             <h1 class="title">
                 <a href="archive/last words/last_words.html">
                     Last Words<br>Album Cover & Spotify Canvas Design</a></h1>
-            <!-- <br><hr><br><br> -->
-
-
-            <!-- <div class="pic2">
-                <a href="archive/altoona/altoona.html">
-                    <img src="archive/altoona/altoona cover.png" class="pic21 pica">
-                </a>
-                <a href="archive/altoona/altoona.html">
-                    <img src="archive/altoona/altoonav.png" class="pic22 pica">
-                </a>
-            </div>
-            <br>
-            <h1 class="title">
-                <a href="archive/altoona/altoona.html">
-                    Altoona<br>Album Cover Design & Set Building</a></h1>
-            <br><hr><br><br> -->
-
-            
-            <!-- <div style="padding:56.39% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396542?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-            <br><br>
-            <h1 class="title"><a href="archive/micro_nova/micro nova.html">MicroNova<br>Frame-by-frame Animation</a></h1>
-            <br>
-            <hr><br><br> -->
-
-
-            <!-- <div class="pic2">
-                <a href="archive/caught_in_the_middle/caught.html">
-                    <img src="archive/caught_in_the_middle/po1.png" class="pic21 pica">
-                </a>
-                <a href="archive/caught_in_the_middle/caught.html">
-                    <img src="archive/caught_in_the_middle/po2.png" class="pic22 pica">
-                </a>
-            </div><br>
-            <h1 class="title"><a href="archive/caught_in_the_middle/caught.html">Caught In The Middle<br>Poster Design</a></h1>
-            <br><hr><br><br> -->
-<!-- 
-
-            <div class="pic2">
-                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/poo1.png" class="pic21 pica">
-                </a>
-                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/poo2.png" class="pic22 pica">
-                </a>
-            </div><br>
-            <h1 class="title"><a href="archive/a_pile_of_poo/a_pile_of_poo.html">I Can Text You A Pile Of Poo, But I Can’t Write My Name.<br>Website & Zine</a></h1>
-            <br><hr><br><br> -->
-
-
-
         </div>
 
 
         <div class="home filter">
 
-            <h2 class="poster video editorial">
+            <h2 class="poster video editorial website">
                 <a href="archive/graphic_design_jail/graphic_design_jail.html">
                     <img src="archive/graphic_design_jail/icon.png" class="pica">
                 </a>
             </h2>
-            <h2 class="branding">
+            <h2 class="branding website">
                 <a href="archive/millerknoll/millerknoll.html">
                     <img src="archive/millerknoll/bc.png" class="pica">
                 </a>
@@ -281,6 +232,11 @@
             <h2 class="branding">
                 <a href="archive/JLT/JLT.html">
                     <img src="archive/JLT/bc.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="website">
+                <a href="archive/web_marks/web_marks.html">
+                    <img src="archive/web_marks/phone1.png" class="pica">
                 </a>
             </h2>
             <h2 class="editorial">
@@ -337,7 +293,7 @@
                     <img src="archive/caught_in_the_middle/po1.png" class="pica">
                 </a>
             </h2>
-            <h2 class="editorial">
+            <h2 class="editorial website">
                 <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
                     <img src="archive/a_pile_of_poo/poo1.png" class="pica">
                 </a>
