--- a/index.html
+++ b/index.html
@@ -304,6 +304,11 @@
                 </a>
             </h2>
             <h2 class="video">
+                <a href="archive/lost_memories/lost_memories.html">
+                    <img src="archive/lost_memories/cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="video">
                 <a href="archive/micro_nova/micro nova.html">
                     <img src="archive/micro_nova/6.png" class="pica">
                 </a>
