--- a/index.html
+++ b/index.html
@@ -280,6 +280,21 @@
             <h2 class="album">
                 <img src="archive/moon_would_you/moon.png">
             </h2>
+            <h2 class="website">
+                <a href="archive/bebon/bebon.html">
+                    <img src="archive/bebon/cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="video">
+                <a href="archive/lost_memories/lost_memories.html">
+                    <img src="archive/lost_memories/cover.png" class="pica">
+                </a>
+            </h2>
+            <h2 class="editorial website">
+                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
+                    <img src="archive/a_pile_of_poo/poo1.png" class="pica">
+                </a>
+            </h2>
             <h2 class="video">
                 <a href="archive/digital_escapades/digital_escapades.html">
                     <img src="archive/digital_escapades/preview.png" class="pica">
@@ -288,24 +303,9 @@
             <h2 class="poster video">
                 <img src="archive/black_mamba/poster2.png">
             </h2>
-            <h2 class="poster">
-                <a href="archive/caught_in_the_middle/caught.html">
-                    <img src="archive/caught_in_the_middle/po1.png" class="pica">
-                </a>
-            </h2>
-            <h2 class="editorial website">
-                <a href="archive/a_pile_of_poo/a_pile_of_poo.html">
-                    <img src="archive/a_pile_of_poo/poo1.png" class="pica">
-                </a>
-            </h2>
             <h2 class="album modeling">
                 <a href="archive/altoona/altoona.html">
                     <img src="archive/altoona/altoona cover.png" class="pica">
-                </a>
-            </h2>
-            <h2 class="video">
-                <a href="archive/lost_memories/lost_memories.html">
-                    <img src="archive/lost_memories/cover.png" class="pica">
                 </a>
             </h2>
             <h2 class="video">
