--- a/about.html
+++ b/about.html
@@ -79,20 +79,20 @@
 
         <div class="home">
             <h2 class="abt">
-                A graphic designer specializing in creative direction, typographic systems, web design, and decorative form design. Had more than 170 individual customers as freelance designer, illustrator and craftsman.
+                Valia is a New York-based graphic designer with a specialization in branding, visual systems, and both editorial and web design. With a diverse skill set, she has collaborated with over 170 clients. Beyond her core expertise, she has ventured into web coding, motion graphics, digital collage videos, 3D modeling, and more.
                 <br><br>
                 BFA in Graphic Design from <a href="https://risd.gd/" target="_blank" style="text-decoration:underline;">Rhode Island School of Design</a>.
                 <br><br>
-                <a href="mailto:valialiuwork@gmail.com" target="_blank" style="text-decoration:underline;">Contact</a> for any work related inquiries. Resume and CV available upon request.
+                <a href="mailto:valialiuwork@gmail.com" target="_blank" style="text-decoration:underline;">Contact</a> for any work related inquiries. Resume and portfolio pdf available upon request.
                 <br><br>
                 <a href="https://www.instagram.com/not_valya/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration:underline;">Instagram</a><br>
                 <a href="https://github.com/Valiaaa" target="_blank" style="text-decoration:underline;">Github</a><br>
                 <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a><br>
                 <br>
                 Working Experience:<br>
-                <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Logo design, pitch deck layout refine, and web design.<br>
-                <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Designer assistant.<br>
-                <a href="https://www.shphschool.com/" target="_blank" style="text-decoration:underline;">Shanghai Pinghe Bilingual School</a> – Visual identities for school size activities and ceremonies, yearbook cover for the class of 2019.
+                <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Part-Time Graphic Designer<br>
+                <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Design Intern<br>
+                Shiyuan Consulting Co.,Ltd – Part-Time Graphic Designer
             </h2>
             <div class="portraitf">
                 <img src="portrait.jpg" class="portrait">
