--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
 
         <div class="home">
             <h2 class="abt">
-                Valia is a New York-based graphic designer with a specialization in branding, visual systems, and both editorial and web design. With a diverse skill set, she has collaborated with over 170 clients. Beyond her core expertise, she has ventured into web coding, motion graphics, digital collage videos, 3D modeling, and more.
+                Valia is a New York-based graphic designer with a specialization in branding, visual systems, editorial design, and web design. With a diverse skill set, she has collaborated with over 170 clients. Beyond her core expertise, she has ventured into web coding, motion graphics, digital collage videos, 3D modeling, and more.
                 <br><br>
                 BFA in Graphic Design from <a href="https://risd.gd/" target="_blank" style="text-decoration:underline;">Rhode Island School of Design</a>.
                 <br><br>
