--- a/about.html
+++ b/about.html
@@ -85,14 +85,40 @@
                 <br><br>
                 <a href="mailto:valialiuwork@gmail.com" target="_blank" style="text-decoration:underline;">Contact</a> for any work related inquiries. Resume and portfolio pdf available upon request.
                 <br><br>
-                <a href="https://www.instagram.com/not_valya/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration:underline;">Instagram</a><br>
-                <a href="https://github.com/Valiaaa" target="_blank" style="text-decoration:underline;">Github</a><br>
-                <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a><br>
+                <ul>
+                    <li>
+                        <a href="https://www.instagram.com/not_valya/?igshid=YmMyMTA2M2Y%3D" target="_blank" style="text-decoration:underline;">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Valiaaa" target="_blank" style="text-decoration:underline;">Github</a>
+                    </li>
+                    <li>
+                        <a href="https://vimeo.com/user189269341" target="_blank" style="text-decoration:underline;">Vimeo</a>
+                    </li>
+                </ul>
                 <br>
-                Working Experience:<br>
-                <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Part-Time Graphic Designer<br>
-                <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Design Intern<br>
-                Shiyuan Consulting Co.,Ltd – Part-Time Graphic Designer
+                Currently Working On/For: <br>
+                <div class="ul2">
+                    <div class="li2">
+                        Branding for Aeolusantha & Brightstar Worldwide Limited
+                    </div>
+                    <div class="li2">
+                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Graphic Design and Branding Intern
+                    </div>
+                </div>
+                <br>
+                Working History:<br>
+                <div class="ul2">
+                    <div class="li2">
+                        <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Part-Time Graphic Designer
+                    </div>
+                    <div class="li2">
+                        <a href="https://www.shsymphony.com/" target="_blank" style="text-decoration:underline;">Shanghai Symphony Orchestra</a> – Design Intern<br>
+                    </div>
+                    <div class="li2">
+                        Shiyuan Consulting Co. – Part-Time Graphic Designer
+                    </div>
+                </div>
             </h2>
             <div class="portraitf">
                 <img src="portrait.jpg" class="portrait">
