--- a/about.html
+++ b/about.html
@@ -100,15 +100,27 @@
                 Currently Working On/For: <br>
                 <div class="ul2">
                     <div class="li2">
-                        Branding for Aeolusantha & Brightstar Worldwide Limited
+                        Branding for 原野之上 & Zipper Express Corp
                     </div>
                     <div class="li2">
-                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Graphic Design and Branding Intern
+                        Logo for Aeolusantha & 戌辰实业
+                    </div>
+                    <div class="li2">
+                        Website front-end of Moon-Bound Express
+                    </div>
+                    <div class="li2">
+                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
                     </div>
                 </div>
                 <br>
                 Working History:<br>
                 <div class="ul2">
+                    <div class="li2">
+                        <a href="https://instalily.ai/" target="_blank" style="text-decoration:underline;">Instalily, Inc.</a> – Design Intern
+                    </div>
+                    <div class="li2">
+                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Graphic Design and Branding Intern
+                    </div>
                     <div class="li2">
                         <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Part-Time Graphic Designer
                     </div>
