--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
                         Logo for Aeolusantha & 戌辰实业
                     </div>
                     <div class="li2">
-                        Website front-end of Moon-Bound Express
+                        Website front-end of <a href="https://www.moonbound.express/" target="_blank" style="text-decoration:underline;">Moon-Bound Express</a>
                     </div>
                     <div class="li2">
                         <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
