--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
                 Currently Working On/For: <br>
                 <div class="ul2">
                     <div class="li2">
-                        Branding for 原野之上 & Zipper Express Corp
+                        Branding for 原野之上
                     </div>
                     <div class="li2">
-                        Logo for Aeolusantha & 戌辰实业
+                        Logo for Aeolusantha & SHIXIN studio
                     </div>
                     <div class="li2">
                         Website front-end of <a href="https://www.moonbound.express/" target="_blank" style="text-decoration:underline;">Moon-Bound Express</a>
