--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
             <br><hr><br><br>
 
 
-            <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+            <a href="archive/jungledaydreaming/jungledaydreaming.html">
                 <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/806540127?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
             <br><br>
             <h1 class="title">
-                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
+                <a href="archive/jungledaydreaming/jungledaydreaming.html">
                     Jungle Daydreaming<br>Digital Compositing Video</a></h1>
             <br><hr><br><br>
 
@@ -170,14 +170,14 @@
 
         
             <div class="pic2">
-                <a href="archive/contemporary_art_expression/contemporary.html">
+                <a href="archive/contemporary_art_expression/contemporary_art_expression.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pic21 pica">
                 </a>
-                <a href="archive/contemporary_art_expression/contemporary.html">
+                <a href="archive/contemporary_art_expression/contemporary_art_expression.html">
                     <img src="archive/contemporary_art_expression/2.png" class="pic22 pica">
                 </a>
             </div><br>
-            <h1 class="title"><a href="archive/contemporary_art_expression/contemporary.html">Contemporary Art Expression<br>Poster Design</a></h1>
+            <h1 class="title"><a href="archive/contemporary_art_expression/contemporary_art_expression.html">Contemporary Art Expression<br>Poster Design</a></h1>
             <br><hr><br><br>
 
 
@@ -204,15 +204,15 @@
             <br><hr><br><br>
 
 
-            <a href="archive/last words/last_words.html">
-                <img src="archive/last words/last words.png" class="pic21 pica">
+            <a href="archive/last_words/last_words.html">
+                <img src="archive/last_words/last words.png" class="pic21 pica">
             </a>
             <div style="width:49.2%; display:block; float:right; margin-top: -2px;" id="lastwordsv">
                 <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/844393756?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </div>
             <br><br>
             <h1 class="title">
-                <a href="archive/last words/last_words.html">
+                <a href="archive/last_words/last_words.html">
                     Last Words<br>Album Cover & Spotify Canvas Design</a></h1>
         </div>
 
@@ -250,12 +250,12 @@
                 </a>
             </h2>
             <h2 class="video">
-                <a href="archive/jungle_daydreaming/jungledaydreaming.html">
-                    <img src="archive/jungle_daydreaming/display.png" class="pica">
+                <a href="archive/jungledaydreaming/jungledaydreaming.html">
+                    <img src="archive/jungledaydreaming/display.png" class="pica">
                 </a>
             </h2>
             <h2 class="poster">
-                <a href="archive/contemporary_art_expression/contemporary.html">
+                <a href="archive/contemporary_art_expression/contemporary_art_expression.html">
                     <img src="archive/contemporary_art_expression/1.png" class="pica" style="object-position:0px -10px">
                 </a>
             </h2>
@@ -270,8 +270,8 @@
                 </a>
             </h2>
             <h2 class="album">
-                <a href="archive/last words/last_words.html">
-                    <img src="archive/last words/last words.png" class="pica">
+                <a href="archive/last_words/last_words.html">
+                    <img src="archive/last_words/last words.png" class="pica">
                 </a>
             </h2>
 
