--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 margin-top: 3%;
             }
 
-            #lastwordsv, #millerknoll1, #jlt2, #charting2 {
+            #lastwordsv, #millerknoll1, #charting2 {
                 display: none !important;
             }
 
@@ -48,7 +48,7 @@
                 margin-bottom: 24px;
             }
 
-            #jlt1, #charting1 {
+            #charting1 {
                 width: 100% !important;
             }
         }
@@ -101,12 +101,12 @@
             <br><hr><br><br>
 
 
-            <a href="archive/JLT/JLT.html">
-                <img src="archive/JLT/motion.gif" style="display:inline-block; width: 42.1%;" class="pica" id="jlt1">
-                <img src="archive/JLT/bc.png" style="display:block; width: 56.2%; float: right;" class="pica" id="jlt2">
+            <a href="archive/logofolio/logofolio.html">
+                <img src="archive/logofolio/cover2.jpg" class="pic21 pica" id="lofo1">
+                <img src="archive/logofolio/cover1.jpg" class="pic22 pica" id="lofo2">
             </a>
             <br><br>
-            <h1 class="title"><a href="archive/JLT/JLT.html">讲理堂(JLT)<br>Logo Design</a></h1>
+            <h1 class="title"><a href="archive/logofolio/logofolio.html">Logofolio 2023<br>Logo Design</a></h1>
             <br><hr><br><br>
 
 
@@ -230,8 +230,8 @@
                 </a>
             </h2>
             <h2 class="branding">
-                <a href="archive/JLT/JLT.html">
-                    <img src="archive/JLT/bc.png" class="pica">
+                <a href="archive/logofolio/logofolio.html">
+                    <img src="archive/logofolio/cover2.jpg" class="pica">
                 </a>
             </h2>
             <h2 class="website">
