--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </a>
             </h2>
             <h2 class="video">
-                <a href="archive/micro_nova/micro nova.html">
+                <a href="archive/micro_nova/micro_nova.html">
                     <img src="archive/micro_nova/6.png" class="pica">
                 </a>
             </h2>
