--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
                     <img src="archive/altoona/altoona cover.png" class="pica">
                 </a>
             </h2>
+            <h2 class="website">
+                <a href="archive/moon-bound_express/moon-bound_express.html">
+                    <img src="archive/moon-bound_express/osmanthus1.jpg" class="pica">
+                </a>
+            </h2>
             <h2 class="video">
                 <a href="archive/micro_nova/micro_nova.html">
                     <img src="archive/micro_nova/6.png" class="pica">
