--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                 Currently Working On/For: <br>
                 <div class="ul2">
                     <div class="li2">
-                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
+                        <a href="https://www.mymonthly.io/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
                     </div>
                     <div class="li2">
                         Branding for 原野之上
@@ -113,7 +113,7 @@
                         <a href="https://instalily.ai/" target="_blank" style="text-decoration:underline;">Instalily, Inc.</a> – Design Intern
                     </div>
                     <div class="li2">
-                        <a href="https://mymonthly.ai/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Graphic Design and Branding Intern
+                        <a href="https://www.mymonthly.io/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Graphic Design and Branding Intern
                     </div>
                     <div class="li2">
                         <a href="https://0xeden.com/" target="_blank" style="text-decoration:underline;">Eden</a> – Part-Time Graphic Designer
