--- a/index.html
+++ b/index.html
@@ -286,6 +286,11 @@
                     <img src="archive/bebon/cover.jpg" class="pica">
                 </a>
             </h2>
+            <h2 class="website">
+                <a href="archive/shanshan/shanshan.html">
+                    <img src="archive/shanshan/cover.jpg" class="pica">
+                </a>
+            </h2>
             <h2 class="video">
                 <a href="archive/lost_memories/lost_memories.html">
                     <img src="archive/lost_memories/cover.jpg" class="pica">
