--- a/about.html
+++ b/about.html
@@ -100,10 +100,10 @@
                         <a href="https://www.mymonthly.io/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
                     </div>
                     <div class="li2">
-                        Branding for 原野之上
+                        Branding for Refract Labs
                     </div>
                     <div class="li2">
-                        Logo for Aeolusantha & SHIXIN studio
+                        Packaging Design for Docean Team
                     </div>
                 </div>
                 <br>
