--- a/about.html
+++ b/about.html
@@ -100,10 +100,16 @@
                         <a href="https://www.mymonthly.io/" target="_blank" style="text-decoration:underline;">My Monthly LLC</a> – Visual Identity Manager
                     </div>
                     <div class="li2">
-                        Branding for Refract Labs
+                        Website Design for Refract Labs
                     </div>
                     <div class="li2">
                         Packaging Design for Docean Team
+                    </div>
+                    <div class="li2">
+                        Album Design for "Remake"
+                    </div>
+                    <div class="li2">
+                        (upcoming!) Branding for <a href="https://bladecreate.ai/" target="_blank" style="text-decoration:underline;">BladeCreate</a>
                     </div>
                 </div>
                 <br>
