--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
 
         <div class="home">
             <h2 class="abt">
-                Valia is a New York-based graphic designer with a specialization in branding, visual systems, editorial design, and web design. With a diverse skill set, she has collaborated with over 170 clients. Beyond her core expertise, she has ventured into web coding, motion graphics, digital collage videos, 3D modeling, and more.
+                Valia is a New York-based, brand-oriented graphic designer. With extensive experience in creating, refining, and rebranding, she is skilled at enhancing your brand, product, and projects. With a diverse skill set including web design, coding, motion graphics, video editing, and 3D modeling, Valia has worked with over 180 clients. This extensive experience has made her great at communicating and understanding their(your?) design needs.
                 <br><br>
                 BFA in Graphic Design from <a href="https://risd.gd/" target="_blank" style="text-decoration:underline;">Rhode Island School of Design</a>.
                 <br><br>
