--- a/index.html
+++ b/index.html
@@ -324,6 +324,9 @@
                     <img src="archive/moon-bound_express/osmanthus1.jpg" class="pica">
                 </a>
             </h2>
+            <h2 class="album">
+                <img src="archive/singles/you_may_not_ask.jpg">
+            </h2>
             <h2 class="video">
                 <a href="archive/micro_nova/micro_nova.html">
                     <img src="archive/micro_nova/6.jpg" class="pica">
