--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
 
 
             <div class="pic2">
-                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
-                    <img src="archive/stillness_geometric_nostalgia/cover.jpg" class="pic21 pica">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/cover.jpg" class="pic21 pica">
                 </a>
-                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
-                    <img src="archive/stillness_geometric_nostalgia/inner.jpg" class="pic22 pica">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/9.jpg" class="pic22 pica">
                 </a>
             </div>
             <br>
             <h1 class="title">
-                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
-                    Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
+                <a href="archive/altoona/altoona.html">
+                    Altoona<br>Album Cover Design</a></h1>
             <br><hr><br><br>
 
 
@@ -177,6 +177,21 @@
             <br><hr><br><br>
 
 
+            <div class="pic2">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/cover.jpg" class="pic21 pica">
+                </a>
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/inner.jpg" class="pic22 pica">
+                </a>
+            </div>
+            <br>
+            <h1 class="title">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    Stillness, Geometric, Nostalgia.<br>Interview & Newsprint Layout</a></h1>
+            <br><hr><br><br>
+
+
             <a href="archive/second_best/second_best.html">
                 <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/789396762?autoplay=1&loop=1&autopause=0&muted=1"  frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Second Best"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
             </a>
@@ -184,19 +199,6 @@
             <h1 class="title">
                 <a href="archive/second_best/second_best.html">
                     Second Best<br>Frame-by-frame Animation</a></h1>
-            <br><hr><br><br>
-
-
-            <div class="pic2">
-                <a href="archive/midnight_blues_u/midnight_blues_u.html">
-                    <img src="archive/midnight_blues_u/cover.jpg" class="pic21 pica">
-                </a>
-                <a href="archive/midnight_blues_u/midnight_blues_u.html">
-                    <img src="archive/midnight_blues_u/vinyl.jpg" class="pic22 pica">
-                </a>
-            </div>
-            <br>
-            <h1 class="title"><a href="archive/midnight_blues_u/midnight_blues_u.html">Midnight <span style="font-style: italic;">(Blues)</span> &U<br>Model & Vinyl Design</a></h1>
             <br><hr><br><br>
 
 
@@ -240,9 +242,9 @@
                     <img src="archive/web_marks/phone1.jpg" class="pica">
                 </a>
             </h2>
-            <h2 class="editorial">
-                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
-                    <img src="archive/stillness_geometric_nostalgia/cover.jpg" class="pica">
+            <h2 class="album modeling">
+                <a href="archive/altoona/altoona.html">
+                    <img src="archive/altoona/cover.jpg" class="pica">
                 </a>
             </h2>
             <h2 class="editorial">
@@ -260,14 +262,14 @@
                     <img src="archive/contemporary_art_expression/1.jpg" class="pica" style="object-position:0px -10px">
                 </a>
             </h2>
+            <h2 class="editorial">
+                <a href="archive/stillness_geometric_nostalgia/stillness_geometric_nostalgia.html">
+                    <img src="archive/stillness_geometric_nostalgia/cover.jpg" class="pica">
+                </a>
+            </h2>
             <h2 class="video">
                 <a href="archive/second_best/second_best.html">
                     <img src="archive/second_best/image.jpg" class="pica">
-                </a>
-            </h2>
-            <h2 class="album modeling">
-                <a href="archive/midnight_blues_u/midnight_blues_u.html">
-                    <img src="archive/midnight_blues_u/cover.jpg" class="pica">
                 </a>
             </h2>
             <h2 class="album">
@@ -278,8 +280,10 @@
 
 
 
-            <h2 class="album">
-                <img src="archive/moon_would_you/moon.jpg">
+            <h2 class="album modeling">
+                <a href="archive/midnight_blues_u/midnight_blues_u.html">
+                    <img src="archive/midnight_blues_u/cover.jpg" class="pica">
+                </a>
             </h2>
             <h2 class="website">
                 <a href="archive/bebon/bebon.html">
@@ -311,13 +315,14 @@
                     <img src="archive/chatbot_showcase/cover.jpg" class="pica">
                 </a>
             </h2>
+            <h2 class="album">
+                <img src="archive/singles/do_not_hold_doors.jpg">
+            </h2>
+            <h2 class="album">
+                <img src="archive/moon_would_you/moon.jpg">
+            </h2>
             <h2 class="poster video">
                 <img src="archive/black_mamba/poster2.jpg">
-            </h2>
-            <h2 class="album modeling">
-                <a href="archive/altoona/altoona.html">
-                    <img src="archive/altoona/altoona cover.jpg" class="pica">
-                </a>
             </h2>
             <h2 class="website">
                 <a href="archive/moon-bound_express/moon-bound_express.html">
@@ -326,9 +331,6 @@
             </h2>
             <h2 class="album">
                 <img src="archive/singles/you_may_not_ask.jpg">
-            </h2>
-            <h2 class="album">
-                <img src="archive/singles/do_not_hold_doors.jpg">
             </h2>
             <h2 class="video">
                 <a href="archive/micro_nova/micro_nova.html">
