--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <img src="archive/logofolio/cover2.jpg" class="pica">
                 </a>
             </h2>
-            <h2 class="video">
+            <h2 class="branding video">
                 <a href="archive/my_monthly_trailer/my_monthly_trailer.html">
                     <img src="archive/my_monthly_trailer/5.jpg" class="pica">
                 </a>
