--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
             <h2 class="album">
                 <img src="archive/singles/you_may_not_ask.jpg">
             </h2>
+            <h2 class="album">
+                <img src="archive/singles/haleyon.jpg">
+            </h2>
             <h2 class="video">
                 <a href="archive/micro_nova/micro_nova.html">
                     <img src="archive/micro_nova/6.jpg" class="pica">
