--- a/archive.html
+++ b/archive.html
@@ -15,6 +15,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YB3PB2KE3B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YB3PB2KE3B');
+</script>
+
 <body>
     <div id="bg"><div class="noise nopc"></div></div>
     <div class="mobile-nav">
