--- a/filter.html
+++ b/filter.html
@@ -12,6 +12,16 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YB3PB2KE3B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YB3PB2KE3B');
+</script>
+
 <body>
     <div id="bg"><div class="noise nopc"></div></div>
     <div class="mobile-nav">
