--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="about-container">
                 <div class="about-text">
                     <h1>
-                        is a New York-based graphic designer specializing in visual identity, typography, and front-end web development. Focused on crafting compelling brand narratives and seamless digital experiences. Currently Branding Lead @<a href="https://www.mymonthly.io/" target="_blank">My Monthly</a>.
+                        is a New York-based graphic designer specializing in visual identity, typography, and front-end web development. Focused on crafting compelling brand narratives and seamless digital experiences. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank">My Monthly</a>.
                         <br><br><br><br><br>
                     </h1>
                     <h3>
