--- a/about.html
+++ b/about.html
@@ -43,19 +43,19 @@
             <div class="about-container">
                 <div class="about-text">
                     <h1>
-                        is a New York-based graphic designer specializing in visual identity, typography, and front-end web development. Focused on crafting compelling brand narratives and seamless digital experiences. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank">My Monthly</a>.
+                        is a New York-based graphic designer specializing in visual identity, typography, and front-end web development. Focused on crafting compelling brand narratives and seamless digital experiences. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank" class="hoverZoom">My Monthly</a>.
                     </h1>
                     <br><br><br><br><br><br><br><br>
                     <h3>
-                        <a href="mailto:valialiuwork@gmail.com" target="_blank">Contact</a> for work-related inquiries. Resume and portfolio available upon request.
+                        <a href="mailto:valialiuwork@gmail.com" target="_blank" class="hoverZoom">Contact</a> for work-related inquiries. Resume and portfolio available upon request.
                         <br><br>
-                        BFA in Graphic Design @<a href="https://risd.gd/" target="_blank">Rhode Island School of Design</a> (2023).
+                        BFA(2023) in Graphic Design @<a href="https://risd.gd/" target="_blank" class="hoverZoom">Rhode Island School of Design</a>.
                         <br><br>
                         ps. This website is hand-coded by me (with a little AI magic, of course).
                         <ul class="social-links">
-                            <li><span class="no-emoji-arrow">&#8599;</span><a href="mailto:valialiuwork@gmail.com" target="_blank">valialiuwork@gmail.com</a></li>
-                            <li><span class="no-emoji-arrow">&#8599;</span><a href="https://www.instagram.com/not_valya/" target="_blank">Instagram</a></li>
-                            <li><span class="no-emoji-arrow">&#8599;</span><a href="https://www.linkedin.com/in/valialiu/" target="_blank">Linkedin</a></li>
+                            <li><span class="no-emoji-arrow">&#8599;</span><a href="mailto:valialiuwork@gmail.com" target="_blank" class="hoverZoom">valialiuwork@gmail.com</a></li>
+                            <li><span class="no-emoji-arrow">&#8599;</span><a href="https://www.instagram.com/not_valya/" target="_blank" class="hoverZoom">Instagram</a></li>
+                            <li><span class="no-emoji-arrow">&#8599;</span><a href="https://www.linkedin.com/in/valialiu/" target="_blank" class="hoverZoom">Linkedin</a></li>
                         </ul>
                     </h3>
                 </div>
