--- a/archive.html
+++ b/archive.html
@@ -41,11 +41,23 @@
 
         <main class="content">
             <img src="archive/projects/do_not_hold_doors.jpg">
+            <img src="archive/projects/portrait.jpg">
+            <img src="archive/projects/ring2.jpg">
             <img src="archive/projects/haleyon.jpg">
-            <img src="archive/projects/you_may_not_ask.jpg">
             <img src="archive/projects/moon.jpg">
+            <img src="archive/projects/ring1.jpg">
+            <img src="archive/projects/you_may_not_ask.jpg">
+            <img src="archive/projects/pink fish.gif">
             <img src="archive/projects/sky 1 0-80.gif">
+            <img src="archive/projects/Oh Hyuk.gif">
+            <img src="archive/projects/anti white cube.jpg">
             <img src="archive/projects/blackmambacut-ezgif.com-resize.gif">
+            <img src="archive/projects/snow print.jpg">
+            <img src="archive/projects/moth puff2.jpg">
+            <img src="archive/projects/moth puff.jpg">
+            <img src="archive/projects/v necklace.jpg">
+            <img src="archive/projects/moth wool.jpg">
+            <img src="archive/projects/moth cut.jpg">
         </main>
     </div>
 
@@ -70,6 +82,7 @@
     </script>
   
     <script src="scripts/navigation.js"></script>
+    <script src="scripts/horizontalOrder.js"></script>
     <script src="scripts/archiveLightbox.js"></script>
 </body>
 </html>
