--- a/archive.html
+++ b/archive.html
@@ -39,7 +39,8 @@
     
     <div class="container">
 
-        <main class="content">
+        <!-- Desktop version -->
+        <main class="content contentpc">
             <img src="archive/projects/do_not_hold_doors.jpg">
             <img src="archive/projects/portrait.jpg">
             <img src="archive/projects/ring2.jpg">
@@ -58,6 +59,28 @@
             <img src="archive/projects/v necklace.jpg">
             <img src="archive/projects/moth wool.jpg">
             <img src="archive/projects/moth cut.jpg">
+        </main>
+
+        <!-- Mobile version -->
+        <main class="content contentphone">
+            <img src="archive/projects/do_not_hold_doors.jpg">
+            <img src="archive/projects/portrait.jpg">
+            <img src="archive/projects/haleyon.jpg">
+            <img src="archive/projects/moon.jpg">
+            <img src="archive/projects/you_may_not_ask.jpg">
+            <img src="archive/projects/pink fish.gif">
+            <img src="archive/projects/sky 1 0-80.gif">
+            <img src="archive/projects/anti white cube.jpg">
+            <img src="archive/projects/blackmambacut-ezgif.com-resize.gif">
+            <img src="archive/projects/Oh Hyuk.gif">
+            <img src="archive/projects/ring2.jpg">
+            <img src="archive/projects/ring1.jpg">
+            <img src="archive/projects/moth cut.jpg">
+            <img src="archive/projects/v necklace.jpg">
+            <img src="archive/projects/moth wool.jpg">
+            <img src="archive/projects/moth puff.jpg">
+            <img src="archive/projects/snow print.jpg">
+            <img src="archive/projects/moth puff2.jpg">
         </main>
     </div>
 
