--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   
       <main class="home content">
         <h1 class="title" style="margin-bottom: calc( var(--gap) * 3); display: inline-block;">
-          is a New York-based graphic designer specializing in visual identity, typography, and front-end web development.
+          is a <s>Shanghai</s> <s>Providence</s> New York-based graphic designer working between image, language, and code.
         </h1>
         <section class="featured-container">
           <div class="featured-projects">
