--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="about-container">
                 <div class="about-text">
                     <h1>
-                        is a New York-based graphic designer specializing in visual identity, typography, and front-end web development. Focused on crafting compelling brand narratives and seamless digital experiences. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank" class="hoverZoom">My Monthly</a>.
+                        is a <s>Shanghai</s> <s>Providence</s> New York-based graphic designer working between image, language, and code. Focused on shaping brand narratives and digital experiences through visual and technical systems. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank" class="hoverZoom">My Monthly</a>.
                     </h1>
                     <br><br><br><br><br><br><br><br>
                     <h3>
@@ -51,7 +51,7 @@
                         <br><br>
                         BFA(2023) in Graphic Design @<a href="https://risd.gd/" target="_blank" class="hoverZoom">Rhode Island School of Design</a>.
                         <br><br>
-                        ps. This website is hand-coded by me (with a little AI magic, of course).
+                        ps. This website is hand-coded by me (with some AI magic, of course).
                         <ul class="social-links">
                             <li><span class="no-emoji-arrow">&#8599;</span><a href="mailto:valialiuwork@gmail.com" target="_blank" class="hoverZoom">valialiuwork@gmail.com</a></li>
                             <li><span class="no-emoji-arrow">&#8599;</span><a href="https://www.instagram.com/not_valya/" target="_blank" class="hoverZoom">Instagram</a></li>
