--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <div class="about-container">
                 <div class="about-text">
                     <h1>
-                        is a <s>Shanghai</s> <s>Providence</s> New York-based graphic designer working between image, language, and code. Focused on shaping brand narratives and digital experiences through visual and technical systems. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank" class="hoverZoom">My Monthly</a>.
+                        is a a <s style="margin-right: 4px;">Shanghai</s> <s style="margin-right: 2px;">Providence</s> New York-based graphic designer working between image, language, and code. Focused on shaping brand narratives and digital experiences through visual and technical systems. Currently Brand Lead @<a href="https://www.mymonthly.io/" target="_blank" class="hoverZoom">My Monthly</a>.
                     </h1>
                     <br><br><br><br><br><br><br><br>
                     <h3>
